--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -853,10 +853,13 @@ filegroup(
         "test/non_convex_mesh.vtk",
         "test/one_negative_tetrahedron.vtk",
         "test/one_tetrahedron.vtk",
+        "test/pepper_r0.005_sdf.vtk",
+        "test/pepper_r0.005_sdf_optimize.vtk",
         "test/some_volume.vtk",
         "test/two_tetrahedra_with_field_variable.vtk",
         "test/unstructured.vtk",
         "test/yellow_pepper_EmPress_sdfield.vtk",
+        "test/yellow_pepper_EmPress_optimized_sdfield.vtk",
     ],
 )
 
