--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -660,7 +660,11 @@ drake_cc_library(
     ],
     implementation_deps = [
         ":distance_to_point_callback",
+        "@vtk_internal//:vtkCommonCore",
+        "@vtk_internal//:vtkCommonDataModel",
         "@vtk_internal//:vtkFiltersCore",
+        "@vtk_internal//:vtkFiltersSources",
+        "@vtk_internal//:vtkIOLegacy",
     ],
 )
 
