Split into two executables: empress0 and empress1
- empress0 generates a signed distance field and its support mesh from an input surface mesh.
- empress1 improves result from empress0 by mesh smoothing and coarsening.
- Right now coarsen meshes by a conservative fraction = 0.5 to preserve zero-level set.

--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -1062,13 +1062,26 @@ drake_cc_library(
 )
 
 drake_cc_binary(
-    name = "empress",
-    srcs = ["empress.cc"],
+    name = "empress0",
+    srcs = ["empress0.cc"],
+    deps = [
+        ":make_empress_field",
+        ":mesh_to_vtk",
+        ":obj_to_surface_mesh",
+        "//common:add_text_logging_gflags",
+        "@gflags",
+    ],
+)
+
+drake_cc_binary(
+    name = "empress1",
+    srcs = ["empress1.cc"],
     deps = [
         ":make_empress_field",
         ":mesh_to_vtk",
         ":obj_to_surface_mesh",
         ":optimize_sdfield",
+        ":vtk_to_volume_mesh",
         "//common:add_text_logging_gflags",
         "@gflags",
     ],
