--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -967,6 +967,32 @@ drake_cc_library(
 )
 
 drake_cc_library(
+    name = "temp_volume_coarsener",
+    srcs = ["temp_volume_coarsener.cc"],
+    hdrs = ["temp_volume_coarsener.h"],
+    tags = ["exclude_from_package"],
+    deps = [
+        ":distance_to_point_callback",
+        ":field_intersection",
+        ":hydroelastic_internal",
+        ":make_box_field",
+        ":make_box_mesh",
+        ":volume_mesh",
+        ":volume_mesh_refiner",
+        ":volume_to_surface_mesh",
+        ":vtk_to_volume_mesh",
+        "//common",
+    ],
+    implementation_deps = [
+        "@vtk_internal//:vtkCommonCore",
+        "@vtk_internal//:vtkCommonDataModel",
+        "@vtk_internal//:vtkFiltersCore",
+        "@vtk_internal//:vtkFiltersSources",
+        "@vtk_internal//:vtkIOLegacy",
+    ],
+)
+
+drake_cc_library(
     name = "tessellation_strategy",
     hdrs = ["tessellation_strategy.h"],
 )
@@ -1836,6 +1862,34 @@ drake_cc_googletest(
     name = "sorted_triplet_test",
     deps = [
         ":sorted_triplet",
+    ],
+)
+
+drake_cc_googletest(
+    name = "temp_volume_coarsener_test",
+    data = [
+        "//geometry:test_obj_files",
+        "//geometry:test_vtk_files",
+        "@drake_models//:dishes",
+        "@drake_models//:ycb",
+    ],
+    deps = [
+        ":make_empress_field",
+        ":make_mesh_from_vtk",
+        ":mesh_to_vtk",
+        ":obj_to_surface_mesh",
+        ":temp_volume_coarsener",
+        ":volume_mesh",
+        ":vtk_to_volume_mesh",
+        "//common",
+        "//common/test_utilities",
+        "//common/test_utilities:eigen_matrix_compare",
+        "//common/test_utilities:expect_throws_message",
+        "@vtk_internal//:vtkCommonCore",
+        "@vtk_internal//:vtkCommonDataModel",
+        "@vtk_internal//:vtkFiltersCore",
+        "@vtk_internal//:vtkFiltersSources",
+        "@vtk_internal//:vtkIOLegacy",
     ],
 )
 
