--- a/geometry/proximity/BUILD.bazel
+++ b/geometry/proximity/BUILD.bazel
@@ -1088,6 +1088,19 @@ drake_cc_binary(
 )
 
 drake_cc_binary(
+    name = "empress2",
+    srcs = ["empress2.cc"],
+    deps = [
+        ":make_empress_field",
+        ":mesh_to_vtk",
+        ":obj_to_surface_mesh",
+        ":vtk_to_volume_mesh",
+        "//common:add_text_logging_gflags",
+        "@gflags",
+    ],
+)
+
+drake_cc_binary(
     name = "refine_mesh",
     srcs = ["refine_mesh.cc"],
     deps = [
