--- a/geometry/BUILD.bazel
+++ b/geometry/BUILD.bazel
@@ -850,6 +850,7 @@ filegroup(
         "test/cube_as_6_squares.vtk",
         "test/cube_as_volume.vtk",
         "test/inflation_infeasible_vertex.vtk",
+        "test/mesh_12vert_20tet_2IntV.vtk",
         "test/non_convex_mesh.vtk",
         "test/one_negative_tetrahedron.vtk",
         "test/one_tetrahedron.vtk",
