Introduce hydroelastic_cuboids tutorial

--- a/tutorials/BUILD.bazel
+++ b/tutorials/BUILD.bazel
@@ -92,6 +92,21 @@ drake_jupyter_py_binary(
 )
 
 drake_jupyter_py_binary(
+    name = "hydroelastic_cuboids",
+    add_test_rule = 1,
+    data = [
+        "@drake_models//:dishes",
+        "@drake_models//:veggies",
+    ],
+    # TODO(#21380) Revisit timeout value when deferred reification is
+    # implemented.
+    test_timeout = "moderate",
+    deps = [
+        "//bindings/pydrake",
+    ],
+)
+
+drake_jupyter_py_binary(
     name = "index",
     add_test_rule = 1,
     deps = [
