Use OBJ and VTK files of the cuboid for hydroelastic contact
See the document "Advice to prepare non-convex meshes for hydroelastics"
https://docs.google.com/document/d/1VZtVsxIjOLKvgQ8SNSrF6PtWuPW5z9PP7-dQuxfmqpc/edit?usp=drive_link

--- a/tutorials/BUILD.bazel
+++ b/tutorials/BUILD.bazel
@@ -110,8 +110,10 @@ drake_jupyter_py_binary(
 filegroup(
     name = "asset",
     srcs = [
+        "asset_files/cuboid.obj",
         "asset_files/cuboid.sdf",
         "asset_files/cuboid.stl",
+        "asset_files/cuboid.vtk",
         "asset_files/peg.stl",
     ],
 )
